--- a/DockerFile
+++ b/DockerFile
@@ -12,31 +12,31 @@ RUN set -x && \
 # add unprivileged user for running the service
 ENV LIBRARY_PATH=/lib:/usr/lib
 RUN set -x && \
-    git clone --recursive https://github.com/Scifabric/pybossa /opt/pybossa && \
-    cd /opt/pybossa && \
+    git clone --recursive https://github.com/sfluo/tinybee /opt/tinybee && \
+    cd /opt/tinybee && \
     pip install -U pip setuptools && \
-    pip install -r /opt/pybossa/requirements.txt && \
-    rm -rf /opt/pybossa/.git/ && \
-    addgroup pybossa  && \
-    adduser -D -G pybossa -s /bin/sh -h /opt/pybossa pybossa && \
-    passwd -u pybossa
+    pip install -r /opt/tinybee/requirements.txt && \
+    rm -rf /opt/tinybee/.git/ && \
+    addgroup tinybee  && \
+    adduser -D -G tinybee -s /bin/sh -h /opt/tinybee tinybee && \
+    passwd -u tinybee
 
 # variables in these files are modified with sed from /entrypoint.sh
-ADD alembic.ini /opt/pybossa/
-ADD settings_local.py /opt/pybossa/
+ADD alembic.ini /opt/tinybee/
+ADD settings_local.py /opt/tinybee/
 
 # TODO: we shouldn't need write permissions on the whole folder
 #   Known files written during runtime:
-#     - /opt/pybossa/pybossa/themes/default/static/.webassets-cache
-#     - /opt/pybossa/alembic.ini and /opt/pybossa/settings_local.py (from entrypoint.sh)
-RUN chown -R pybossa:pybossa /opt/pybossa
+#     - /opt/tinybee/pybossa/themes/default/static/.webassets-cache
+#     - /opt/tinybee/alembic.ini and /opt/tinybee/settings_local.py (from entrypoint.sh)
+RUN chown -R tinybee:tinybee /opt/tinybee
 
 ADD entrypoint.sh /
 ENTRYPOINT ["/entrypoint.sh"]
 
 # run with unprivileged user
-USER pybossa
-WORKDIR /opt/pybossa
+USER tinybee
+WORKDIR /opt/tinybee
 EXPOSE 8080
 
 # Background worker is also necessary and should be run from another copy of this container
