--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "2"
 services:
     redis-master:
         image: 'redis:3.0-alpine'
+        container_name: redis-master
 
     redis-sentinel:
         image: 'jvstein/redis-sentinel:latest'
@@ -10,16 +11,18 @@ services:
             - redis-master
         links:
             - redis-master
+        container_name: redis-sentinel
 
     postgres:
         image: 'postgres:9.6-alpine'
         environment:
             - POSTGRES_USER=pybossa
             - POSTGRES_PASSWORD=supersecretpassword
+        container_name: postgres 
 
     # initializes the database
     db-init:
-        image: 'jvstein/pybossa:latest'
+        image: 'tinybee:latest'
         depends_on:
             - postgres
         environment:
@@ -27,12 +30,13 @@ services:
         links:
             - postgres:db
         command: sh -c "sleep 5 && python cli.py db_create"
+        container_name: db-init
 
     # TODO: create a separate scheduler process??
     #       command: rqscheduler --host redis-master
     # background worker process
     pybossa-bgworker:
-        image: 'jvstein/pybossa:latest'
+        image: 'tinybee:latest'
         depends_on:
             - db-init
         environment:
@@ -42,11 +46,11 @@ services:
             - redis-sentinel
             - postgres:db
         command: python app_context_rqworker.py scheduled_jobs super high medium low email maintenance
+        container_name: pybossa-bgworker 
 
     # web server
     pybossa:
-        image: 'jvstein/pybossa:latest'
-        container_name: pybossa
+        image: 'tinybee:latest'
         depends_on:
             - db-init
         environment:
@@ -57,3 +61,4 @@ services:
             - postgres:db
         ports:
             - "8080:8080"
+        container_name: pybossa
