--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "pybossa/themes/tinybee"]
 	path = pybossa/themes/tinybee
 	url = https://github.com/sfluo/pybossa-default-theme
+[submodule "pybossa/themes/libcrowds-pybossa-theme"]
+	path = pybossa/themes/libcrowds-pybossa-theme
+	url = https://github.com/LibCrowds/libcrowds-pybossa-theme.git
