--- a/provisioning/roles/python/tasks/main.yml
+++ b/provisioning/roles/python/tasks/main.yml
@@ -27,8 +27,45 @@
   with_items:
     - pyopenssl
     - ndg-httpsclient
-    - pyasn1
-  tags:
-    - dependencies
+    - humanize
+    - flask
+    - flask-login
+    - Flask-Babel
+    - flask-assets
+    - flask_json_multidict
+    - redis
+    - flask_mail
+    - SQLAlchemy
+    - Flask-SQLAlchemy
+    - flask_debugtoolbar
+    - Flask-OAuthlib
+    - Flask-Misaka
+    - flask_wtf
+    - mailchimp
+    - flask-plugins
+    - twitter
+    - google-api-python-client
+    - speaklater
+    - flask_cors
+    - flask_simpleldap
+    - flask_profiler
+    - raven[flask]
+    - alembic
+    - html2text
+    - Pillow
+    - unidecode
+    - flatten_json
+    - werkzeug
+    - pandas
+    - PyJWT
+    - pygeoip
+    - markdown
+    - rq
+    - otpauth
+    - readability-lxml
+    - yacryptopan
+    - pycountry
+    - faker
+    - rq_scheduler
   become: true
 
