--- a/provisioning/roles/python/tasks/main.yml
+++ b/provisioning/roles/python/tasks/main.yml
@@ -10,6 +10,16 @@
     - python-dev
     - python-setuptools
     - python-pip
+    - build-essential
+    - libldap2-dev
+    - libjpeg-dev
+    - libssl-dev
+    - swig
+    - libffi-dev
+    - dbus
+    - libdbus-1-dev
+    - libdbus-glib-1-dev
+    - libsasl2-dev
   tags:
     - dependencies
 
@@ -18,7 +28,6 @@
   become: yes
   pip:
     name: pip
-    version: "9.0.3"
     extra_args: --upgrade
 
 - name: Install pip dependencies for SNI support
@@ -55,12 +64,15 @@
     - Pillow
     - unidecode
     - flatten_json
+    - simplejson
     - werkzeug
     - pandas
     - PyJWT
     - pygeoip
     - markdown
+    - rq-dashboard
     - rq
+    - wtforms-components
     - otpauth
     - readability-lxml
     - yacryptopan
