--- a/provisioning/roles/redis/tasks/server.yml
+++ b/provisioning/roles/redis/tasks/server.yml
@@ -19,7 +19,7 @@
       - default/redis.init.j2
       paths:
         - ../templates
-  when: redis_as_service and ansible_service_mgr|default() != "systemd"
+  # when: redis_as_service and ansible_service_mgr|default() != "systemd"
 
 - name: create redis systemd service
   template:
@@ -33,7 +33,7 @@
       paths:
         - ../templates
   register: redis_unit_file
-  when: redis_as_service and ansible_service_mgr|default() == "systemd"
+  # when: redis_as_service and ansible_service_mgr|default() == "systemd"
 
 - name: create systemd tmpfiles configuration
   template:
@@ -42,15 +42,16 @@
     mode: 0644
   when:
     - redis_as_service
-    - ansible_service_mgr|default() == 'systemd'
     - (redis_pidfile|dirname).startswith('/var/run') or (redis_pidfile|dirname).startswith('/run')
+    # - ansible_service_mgr|default() == 'systemd'
 
 - name: reload systemd daemon
   command: systemctl daemon-reload
   when:
     - redis_as_service
-    - ansible_service_mgr|default() == "systemd"
     - redis_unit_file|changed
+
+  #   - ansible_service_mgr|default() == "systemd"
 
 - name: set redis to start at boot
   service:
@@ -109,20 +110,20 @@
     mode: 0640
   notify: "restart redis {{ redis_port }}"
 
-- name: add redis init config file
-  template:
-    dest: /etc/sysconfig/{{ redis_service_name }}
-    src: redis.init.conf.j2
-    mode: 0600
-  when: ansible_os_family == "RedHat"
-  notify: "restart redis {{ redis_port }}"
+# - name: add redis init config file
+#   template:
+#     dest: /etc/sysconfig/{{ redis_service_name }}
+#     src: redis.init.conf.j2
+#     mode: 0600
+#   when: ansible_os_family == "RedHat"
+#   notify: "restart redis {{ redis_port }}"
 
 - name: add redis init config file
   template:
     dest: /etc/default/{{ redis_service_name }}
     src: redis.init.conf.j2
     mode: 0600
-  when: ansible_os_family == "Debian"
+  # when: ansible_os_family == "Debian"
   notify: "restart redis {{ redis_port }}"
 
 # Flush handlers before ensuring the service is started to prevent
