--- a/provisioning/roles/python/tasks/main.yml
+++ b/provisioning/roles/python/tasks/main.yml
@@ -67,11 +67,13 @@
     - simplejson
     - werkzeug
     - pandas
+    - libsass
     - PyJWT
     - pygeoip
     - markdown
     - rq-dashboard
     - rq
+    - jsmin
     - wtforms-components
     - otpauth
     - readability-lxml
