--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "pybossa/themes/default"]
-	path = pybossa/themes/default
-	url = https://github.com/PyBossa/pybossa-default-theme.git
-
+[submodule "themes"]
+	path = themes
+	url = git@github.com:influencerplus123/pybossa-default-theme.git
